--- a/globalEventPage/globalEvent.css
+++ b/globalEventPage/globalEvent.css
@@ -34,14 +34,6 @@ video {
     width: 100%;
 }
 
-a {
-    overflow: hidden;
-    margin: 0px;
-    padding: 0px;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-}
 
 /*영상 슬라이드 버튼*/
 .swiper-button-prev {
@@ -398,6 +390,7 @@ header {
     height: 30px;
     margin-left: 250px;
     margin-top: 25px;
+    margin-right: 200px;
 }
 
 .loginContainer {}
@@ -419,7 +412,7 @@ header {
 
 
 
-.headerContainer>.boxContainer>li {
+.headerContainer>.boxContainer>a>li {
     font-family: "고딕";
     font-style: italic;
     font-weight: 600;
